# codemax

./: .editorconfig  .env.example  .gitignore  .md  README.md  codemax-programming-assistant.md  package-lock.json  package.json  pyproject.toml  rustfmt.toml  workspace-first-ui-preview.html  任务拆解(2).md  开发准则.md  最终计划.md  距离正式上线缺陷清单.md
agent/: README.md  codemax_agent.spec  pyproject.toml
agent/app/: __init__.py  main.py  model_audit.py  model_gateway.py  privacy.py  proposals.py  scheduler.py
agent/app/api/: __init__.py  health.py  memory.py  models.py  tasks.py
agent/app/autonomous/: __init__.py  loop.py
agent/app/context/: __init__.py  language_registry.py  parser_service.py  retriever.py
agent/app/core/: __init__.py  config.py
agent/app/editing/: __init__.py  apply.py  models.py
agent/app/graph/: __init__.py  checkpoint.py  nodes.py  state.py  workflow.py
agent/app/memory/: __init__.py  service.py
agent/app/providers/: __init__.py  client.py  config.py  errors.py  openai_compatible.py
agent/app/screenshots/: __init__.py  service.py
agent/app/tools/: __init__.py  protocol.py  registry.py
agent/app/validation/: __init__.py  detector.py
agent/tests/: test_autonomous_agent_loop.py  test_file_commit_protocol.py  test_memory_preference_guard.py  test_model_audit_task_linkage.py  test_model_driven_editing.py  test_model_gateway.py  test_privacy.py  test_repair_loop.py  test_s11_mvp_acceptance.py  test_s12_scheduler_context.py  test_s12_screenshot_proposals.py  test_tool_registry.py  test_tool_runtime_protocol.py  test_validation_detector.py
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: events.rs  lib.rs  main.rs  recovery.rs  safe_fs.rs  secrets.rs
apps/desktop/src-tauri/src/agent/: mod.rs
apps/desktop/src-tauri/src/commands/: agent.rs  agent_tools.rs  app.rs  approvals.rs  delivery.rs  diff.rs  exec.rs  files.rs  merge.rs  mod.rs  models.rs  privacy.rs  repository.rs  s11_acceptance.rs  s12_evidence.rs  skills.rs  tasks.rs  worktree.rs
apps/desktop/src-tauri/src/core/: error.rs
apps/desktop/src-tauri/src/exec/: mod.rs
apps/desktop/src-tauri/src/git/: mod.rs
apps/desktop/src-tauri/src/privacy/: mod.rs
(+144 files in other folders)
