[project]
name = "codemax-agent"
version = "0.0.0"
description = "Python Agent engine for Codemax Agent Task Console."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "langgraph>=0.2.0",
  "openai>=1.0.0",
  "pydantic>=2.8.0",
  "uvicorn>=0.30.0"
]

[project.scripts]
codemax-agent = "app.main:main"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6,<7",
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

